  warn when the argument is matches against a constant pattern.  This
  attribute is applied on predefined exception constructors which
  take an purely informational (with no stability guarantee) message.
  (Alain Frisch)
- GPR#173: [@inline] and [@inlined] attributes (for function declarations
  and call sites respectively) to control inlining
  (Pierre Chambart, Mark Shinwell)

Compilers:
- PR#4800: better compilation of tuple assignment (Gabriel Scherer and
  Alain Frisch)
- PR#6501: harden the native-code generator against certain uses of "%identity"
  (Xavier Leroy, report by Antoine Miné).
- PR#6636: add --version option
  (Peter Zotov)
- improve type-specialization of unapplied primitives
  (Frédéric Bour, review by Gabriel Scherer)
- PR#6737: fix Typedtree attributes on (fun x -> body) expressions
- PR#6679: fix pprintast printing of constraints in type declarations
- PR#6845: -no-check-prims to tell ocamlc not to check primitives in runtime
- PR#6943: native-code generator for POWER/PowerPC 64 bits, both in
  big-endian (ppc64) and little-endian (ppc64le) configuration.
  (Xavier Leroy, with inspiration from RedHat's unofficial ppc64 and ppc64le
   ports)
- PR#6979: better code generation in x86-32 backend for copying floats to
  the stack (Marc Lasson, review by Xavier Leroy)
- PR#7018: fix missing identifier renaming during inlining (Alain Frisch,
  review by Xavier Leroy)
- GPR#17: some cmm optimizations of integer operations with constants
  (Stephen Dolan, review by Pierre Chambart)
- GPR#109: new unboxing strategy for float and int references (Vladimir Brankov,
  review by Alain Frisch)
- GPR#107: Prevent more unnecessary float boxing, especially in `if` and `match`
  (Vladimir Brankov, review by Alain Frisch)
- GPR#115: More precise typing of values at the C-- and Mach level,.
  (Xavier Leroy, review by Pierre Chambart)
- GPR#207: Colors in compiler messages (warnings, errors)
  (Simon Cruanes, review by Gabriel Scherer)